# knspring_2025

./: README.md  kraken-jam.sublime-project  kraken-jam.sublime-workspace  main.cpp  meson.build  split.py
include/: Game.hpp  Player.hpp  PolygonManager.hpp  Scene.hpp  TileManager.hpp  globals.hpp  keybinds.hpp  utils.hpp
include/kn/: AnimationController.hpp  Draw.hpp  Ease.hpp  Font.hpp  GameController.hpp  Input.hpp  Key.hpp  KrakenEngine.hpp  Math.hpp  Mouse.hpp  Rect.hpp  Texture.hpp  TileMap.hpp  Window.hpp
res/data/saves/polygons/: checks.json  dmg.json  door.json  foreground.json  walls.json  xbounds.json  ybounds.json
res/images/ase/: player.ase  prototileset.ase
res/images/tilesets/: noir.csv
src/: game.cpp  keybinds.cpp  meson.build  player.cpp  polygonmanager.cpp  scene.cpp  tilemanager.cpp
src/kn/: _globals.cpp  animation_controller.cpp  camera.cpp  color.cpp  draw.cpp  ease.cpp  font.cpp  game_controller.cpp  input.cpp  key.cpp  mask.cpp  math.cpp  meson.build  mouse.cpp  music.cpp  overflow.cpp  rect.cpp  sound.cpp  surface.cpp  texture.cpp  tile_map.cpp  time.cpp  transform.cpp  window.cpp
src/kn/gfx/: SDL2_framerate.c  SDL2_gfxPrimitives.c  SDL2_imageFilter.c  SDL2_rotozoom.c  meson.build
