subdir('gfx')
kn = [
    'src/kn/_globals.cpp',
    'src/kn/animation_controller.cpp',
    'src/kn/draw.cpp',
    'src/kn/ease.cpp',
    'src/kn/font.cpp',
    'src/kn/game_controller.cpp',
    'src/kn/input.cpp',
    'src/kn/key.cpp',
    'src/kn/mask.cpp',
    'src/kn/math.cpp',
    'src/kn/mouse.cpp',
    'src/kn/music.cpp',
    'src/kn/overflow.cpp',
    'src/kn/rect.cpp',
    'src/kn/sound.cpp',
    'src/kn/surface.cpp',
    'src/kn/texture.cpp',
    'src/kn/tile_map.cpp',
    'src/kn/time.cpp',
    'src/kn/transform.cpp',
    'src/kn/window.cpp',
] + gfx_src
